--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		    html {font-family: 'Song Myung', serif;}
 		    #font1 {font-size: 25px; font-family: 'Song Myung', serif;}
 
-		    body {background: #ffc888; margin: 0px; }
+		    body {background: #7b5586; margin: 0px; }
 
-		    h1 {font-size: 50pt; margin: 0px; margin-top: 10px; font-family: 'East Sea Dokdo', cursive;}
+		    h1 {font-size: 100pt; margin: 0px; margin-top: 10px; font-family: 'East Sea Dokdo', cursive;}
 
-		    h2 {font-size: 40pt; margin-top: 300px; font-family: 'East Sea Dokdo', cursive; color: #718246;}
+		    h2 {font-size: 40pt; margin-top: 300px; font-family: 'East Sea Dokdo', cursive;}
 
             h3 {font-size: 30pt; font-family: 'East Sea Dokdo', cursive; color: black; margin-bottom: 100px;}
 
@@ -23,22 +23,21 @@
 
 		    hr {margin-top: 10px; margin-bottom: 30px;}
 
-		    .wrap { width: 1000px; background: #f6edca; margin: auto; padding: 20px; text-align: center; }
+		    .wrap { width: 800px; background: #e5e0d9; margin: auto; padding: 50px; text-align: center; }
 		    header, section, footer {margin-bottom: 100px;}
-		    section img { display: block; margin: auto; width: 700px; margin-bottom: 20px; }
-		    header {background:#ffb975 ; padding-top: 50px; padding-bottom: 50px; }
+		    section img { display: block; margin: auto; width: 600px; margin-bottom: 20px; }
+		    header {background:#8c5d9d; padding-top: 50px; padding-bottom: 50px; }
 		    header h1{text-align: center; margin-top: 30px; }
 		    header h2{text-align: center; margin-top: 30px; }
-		    footer { height: 150px; background:#ffb975; padding-top: 30px;}
-            footer p {font-family: 'East Sea Dokdo', cursive; color: #718246; font-size: 30px;}
+		    footer { height: 150px; background:#8c5d9d; padding-top: 30px;}
+            footer p {font-family: 'East Sea Dokdo', cursive; color: #e5e0d9; font-size: 30px;}
 
-		    ul {padding: 0px; list-style-position: inside; text-align: left; line-height: 2; font-size: 25px;}
-		    nav { height: 50px; background: #f6edca; }
+		    ul {padding: 0px; list-style-position: inside; text-align: center; line-height: 2; font-size: 25px;}
+		    nav { height: 50px; background: white; font-family: 'East Sea Dokdo', cursive;}
 		    nav ul{float: right; margin: 0px;}
-		    nav ul li{height: 50px; width: 100px; float: left; list-style-type: none; }
-		    nav ul li a{display: block; color: #718246; text-decoration: none; height: 44px; text-align: center; line-height: 44px; transition: all 0.5s;
-		    	font-size: 15px;}
-		    nav ul li a:hover {color: #f6edca; background: #ffb975; font-size: 18px;}
+		    nav ul li{height: 50px; width: 80px; float: left; list-style-type: none; }
+		    nav ul li a{display: block; text-decoration: none; height: 50px; text-align: center; line-height: 44px; transition: all 0.5s; font-size: 23px;}
+		    nav ul li a:hover {color: #dbbadd; background: #8c5d9d; font-size: 20px;}
 		    
 		    .line {border: 5px; }
 		    .w600 {width: 600px; }
@@ -48,16 +47,24 @@
 		    .w100 {width: 100px; }
 		    .border {border: 3px solid #ffb975; }
 		    .circle {border-radius: 50%; }
-            .circle2 {border-radius: 10%}
-            .circle3 {border-radius: 20%}
+            .circle2 {border-radius: 5%}
+            .circle3 {border-radius: 15%}
 		    .footer {width: 800px; margin: auto; padding: 20px; background: #ffb975; height: 150px; color: white; padding-top: 30px; }
-		    .small {font-size: 40px; }
+		    .small {font-size: 50px; }
 		    .small2 {font-size: 18px; }
-		    .color {color: #254c2b;}
+		    .color {color: #e5e0d9;}
+            .colorred {color: #f95461;}
+            .colororange {color: #ff7533;}
+            .coloryellow {color: #dacb03;}
+            .colorgreen {color: #00a78b;}
+            .colorblue {color: #0082c7;}
+            .colorpurple {color: #7659b0;}
+            .colorpink {color: #e854a1;}
+            .h2 {margin-top: 100px;}
 		    .center {text-align: center; margin-top: 30px; }
-		    .header {width: 800px; margin: auto; padding: 20px; background: #718246; height: 150px; padding-top: 30px; }
+		    .header {width: 800px; margin: auto; padding: 20px; background: #dbbadd; height: 150px; padding-top: 30px; }
 
-		    @media all and (max-width: 1000px) {.wrap{width: 100%; background:#f6edca;}}
+		    @media all and (max-width: 1000px) {.wrap{width: 100%; background:#dbbadd;}}
 		</style>
 </head>
 
@@ -66,25 +73,25 @@
 	<div class="wrap">
 		<nav>
 			<ul>
-				<li><a  class="circle3" href=#sec1> KIT 구성 </a></li>
-				<li><a  class="circle3" href=#sec2> 디테일 </a></li>
-				<li><a  class="circle3" href=#sec3> ver.크레용 </a></li>
-				<li><a  class="circle3" href=#sec4> ver.수채화 </a></li>
-				<li><a  class="circle3" href=#sec5> ver.ALL </a></li>
-				<li><a  class="circle3" href=#sec6> 작은 전시회 </a></li>
-				<li><a  class="circle3" href=#sec7> 리뷰 </a></li>
+				<li><a  class="colorred circle" href=#sec1> KIT 구성 </a></li>
+				<li><a  class="colororange circle" href=#sec2> 디테일 </a></li>
+				<li><a  class="coloryellow circle" href=#sec3> ver.크레용 </a></li>
+				<li><a  class="colorgreen circle" href=#sec4> ver.수채화 </a></li>
+				<li><a  class="colorblue circle" href=#sec5> ver.ALL </a></li>
+				<li><a  class="colorpurple circle" href=#sec6> 작은 전시회 </a></li>
+				<li><a  class="colorpink circle" href=#sec7> 리뷰 </a></li>
 			</ul>
 		</nav>
-		<header class="circle3">
-  			<h1 class="small color"> ▶ How To Use ◀ </h1>
-    		<h1 class="color"> 내 손으로 만드는 미니 ★화실★ 키트 </h1>
+		<header class="circle2">
+  			<h1 class="color"> ✎How To Use✐ </h1>
+    		<h1 class="small color"> D.I.Y 미니 화실 키트 </h1>
 	</div>
 		</header>
 
 <div class="wrap">
 	<main>
   		<section id="sec1">
-        	<h2> KIT 구성 ★ </h2>
+        	<h2 class="colorred h2"> ✎KIT 구성 </h2>
         	<hr>
         	<img src="./001.JPG" class="circle2"/ >
         	<img src="./002.JPG" class="circle2"/ >
@@ -97,7 +104,7 @@
 
 
     	<section id="sec2">
-        	<h2> 디테일 ★ </h2>
+        	<h2 class="colororange"> ✎디테일 </h2>
         	<hr>
         	<img src="./009.JPG" class="circle w500"/ >
             <img src="./010.JPG" class="circle w500"/ >
@@ -127,7 +134,7 @@
 		</section>
 
 		<section id="sec3">
-			<h2> 크레용으로 그릴래요 ★ </h2>
+			<h2 class="coloryellow"> ✎크레용으로 그릴래요 </h2>
         	<hr>
 			<img src="./026.JPG" class="circle2"/ >
 				<p> 오늘은 물감쓰기가 귀찮아요.</p>
@@ -144,7 +151,7 @@
 
 
 		<section id="sec4">
-        	<h2> 물감으로 그릴래요 ★ </h2>
+        	<h2 class="colorgreen"> ✎물감으로 그릴래요</h2>
         	<hr>
         	<img src="./029.JPG" class="circle2"/ >
                 <p> 오늘은 부드러운 수채화가 끌려요.</p>
@@ -159,7 +166,7 @@
 		</section>
 
 		<section id="sec5">
-			<h2> ver.ALL ★ </h2>
+			<h2 class="colorblue"> ✎ver.ALL</h2>
         	<hr>
         	<img src="./041.JPG" class="circle2"/ >
                 <p> 오늘은 모든 채색도구를 사용하고 싶어요.</p>
@@ -177,7 +184,7 @@
 
 
     	<section id="sec6">
-			<h2> 작은 전시회 ★ </h2>
+			<h2 class="colorpurple"> ✎작은 전시회 </h2>
         	<hr>
             <img src="./043.JPG" class="circle2"/ >
                 <p> 완성한 그림을 구겨지지 않게 프레임에 넣어보아요.</p>
@@ -195,7 +202,7 @@
 		</section>
 
 		<section id="sec7">
-    	    <h2> 리뷰 ★ </h2>
+    	    <h2 class="colorpink"> ✎리뷰</h2>
         	<hr>
                 <p> 요즘 같이 전자기기로 그림을 그리는 우리의 삶에서</p>
                 <p> 우리의 느낌, 마음을 자유로운 방식으로 드러낼 수 없을까에 대하여 생각하게 되었다.</p>
@@ -209,7 +216,7 @@
 
 </div>
     <div class="wrap">
-	<footer class="circle3">
+	<footer class="circle2">
   			   <p class="center"> copyright&copy;2019 한경대학교 디자인학과 정연주. 모든 권리 보유. </p>
     </div>
     </footer>
