--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
   		<section id="sec1">
         	<h2 class="colorred h2"> ✎KIT 구성 </h2>
         	<hr>
-        	<img src="./001.JPG" class="circle2"/ >
-        	<img src="./002.JPG" class="circle2"/ >
+        	<img src="./001.jpg" class="circle2"/ >
+        	<img src="./002.jpg" class="circle2"/ >
                 <h3> 10000원으로 만드는 나만의 작은 드로잉 공간 </h3>
                 <p> 한 손에 쏙 들어오는 노트메모지와 다양한 컬러의 채색도구로 표현하고 싶은 모든 것을 그려보는 시간을 가져보아요.</p>
                 <p> 수채화가 끌리는 날에는, 물감만으로. </p>
@@ -106,44 +106,44 @@
     	<section id="sec2">
         	<h2 class="colororange"> ✎디테일 </h2>
         	<hr>
-        	<img src="./009.JPG" class="circle w500"/ >
-            <img src="./010.JPG" class="circle w500"/ >
+        	<img src="./009.jpg" class="circle w500"/ >
+            <img src="./010.jpg" class="circle w500"/ >
                 <h3> 미니 캔버스 </h3>
                 <p> &nbsp; </p>
                 <p> &nbsp; </p>
-            <img src="./012.JPG" class="circle w500"/ >
-            <img src="./014.JPG" class="circle w500"/ >
+            <img src="./012.jpg" class="circle w500"/ >
+            <img src="./014.jpg" class="circle w500"/ >
                 <h3> 손에 묻지않아 깔끔한 크레용 ,12색</h3>
                 <p> &nbsp; </p>
                 <p> &nbsp; </p>
-            <img src="./015.JPG" class="circle w500"/ >
-            <img src="./016.JPG" class="circle w500"/ >
+            <img src="./015.jpg" class="circle w500"/ >
+            <img src="./016.jpg" class="circle w500"/ >
                 <h3> 붓+물감+팔레트 3 in 1 수채화 물감 ,12색</h3>
                 <p> &nbsp; </p>
                 <p> &nbsp; </p>
-            <img src="./019.JPG" class="circle w500"/ >
+            <img src="./019.jpg" class="circle w500"/ >
                 <h3> 크래프트 감성 가득 포토프레임 ,4개입</h3>
                 <p> &nbsp; </p>
                 <p> &nbsp; </p>
-            <img src="./022.JPG" class="circle w500"/ >
+            <img src="./022.jpg" class="circle w500"/ >
                 <h3> 쁘띠쁘띠한 이젤</h3>
                 <p> &nbsp; </p>
                 <p> &nbsp; </p>
-            <img src="./024.JPG" class="circle w500"/ >
+            <img src="./024.jpg" class="circle w500"/ >
                 <h3> 투명 수채화 물통+스펀지</h3>
 		</section>
 
 		<section id="sec3">
 			<h2 class="coloryellow"> ✎크레용으로 그릴래요 </h2>
         	<hr>
-			<img src="./026.JPG" class="circle2"/ >
+			<img src="./026.jpg" class="circle2"/ >
 				<p> 오늘은 물감쓰기가 귀찮아요.</p>
                 <p> 그럼 크레용만 써볼까요?</p>
                 <p> 제가 좋아하는 캐릭터인 토이스토리 우디를 그려보았어요.</p>
                 <p> 크레용이 손에 묻지않고 딱딱해서 훨씬 드로잉하기 수월했어요.</p>
                 <p> &nbsp; </p>
                 <p> &nbsp; </p>
-			<img src="./027.JPG" class="circle2"/ >
+			<img src="./027.jpg" class="circle2"/ >
                 <p> 이렇게 보니 우디가 정말 인사하는 것만 같네요!</p>
                 <p> 때로는 크레파스로 쓱싹쓱싹 색칠하던 어린 시절로 돌아가고 싶을 때가 있어요.</p>
                 <p> 그럴 때 나만의 미니 화실에서 추억을 색칠해보는 건 어떨까요?</p>
@@ -153,14 +153,14 @@
 		<section id="sec4">
         	<h2 class="colorgreen"> ✎물감으로 그릴래요</h2>
         	<hr>
-        	<img src="./029.JPG" class="circle2"/ >
+        	<img src="./029.jpg" class="circle2"/ >
                 <p> 오늘은 부드러운 수채화가 끌려요.</p>
                 <p> 물통에 물을 담고, 붓을 들어볼까요?</p>
                 <p> 이번에도 웃고 있는 우디를 그려보았어요.</p>
                 <p> 번짐없이 슥슥 잘 그려지고 발색도 최고에요!</p>
         		<p> &nbsp; </p>
         		<p> &nbsp; </p>
-			<img src="./030.JPG" class="circle2"/ >
+			<img src="./030.jpg" class="circle2"/ >
                 <p> 수채화로 그려본 우디는 좀더 사람같군요.</p>
                 <P> 밝을 줄 알았던 노랑색이 개나리꽃처럼 활짝 피었어요. </P>
 		</section>
@@ -168,15 +168,15 @@
 		<section id="sec5">
 			<h2 class="colorblue"> ✎ver.ALL</h2>
         	<hr>
-        	<img src="./041.JPG" class="circle2"/ >
+        	<img src="./041.jpg" class="circle2"/ >
                 <p> 오늘은 모든 채색도구를 사용하고 싶어요.</p>
                 <p> 크레용으로 테두리를 그리고, 물감으로 속을 채워요.</p>
                 <p> 빛이 들어오는 쪽에는 물을 많이, 빛이 없는 쪽에는 물감을 많이.</p>
                 <p> 귀여운 밀짚모자를 쓴 선인장을 그려보았어요.</p>
                 <p> &nbsp; </p>
                 <p> &nbsp; </p>
-        	<img src="./040.JPG" class="circle2"/ >
-        	<img src="./042.JPG" class="circle2"/ >
+        	<img src="./040.jpg" class="circle2"/ >
+        	<img src="./042.jpg" class="circle2"/ >
                 <p> 크레용은 직선적이고 거친 느낌을,</p>
                 <p> 물감은 쨍하고 부드러운 느낌을 주네요.</p>
                 <p> 섞어서 잘 활용하면 한 폭의 작품이 완성된답니다.</p>
@@ -186,17 +186,17 @@
     	<section id="sec6">
 			<h2 class="colorpurple"> ✎작은 전시회 </h2>
         	<hr>
-            <img src="./043.JPG" class="circle2"/ >
+            <img src="./043.jpg" class="circle2"/ >
                 <p> 완성한 그림을 구겨지지 않게 프레임에 넣어보아요.</p>
                 <p> 흰 캔버스와 크래프트 프레임의 조화는 정말 감성적이네요.</p>
                 <p> &nbsp; </p>
                 <p> &nbsp; </p>
-            <img src="./044.JPG" class="circle2"/ >
+            <img src="./044.jpg" class="circle2"/ >
                 <p> 집의 분위기가 달라졌어요!</p>
                 <p> 내가 그린 그림을 걸어놓으니 집이 작은 전시회장이 되었어요.</p>
                 <p> &nbsp; </p>
                 <p> &nbsp; </p>
-            <img src="./045.JPG" class="circle2"/ >
+            <img src="./045.jpg" class="circle2"/ >
                 <p> 이렇게 귀여운 전시회가 있다니, 가보고싶지 않으신가요?</p>
                 <p> 나만의 작은 전시회를 열어보세요!</p>
 		</section>
