--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		    html {font-family: 'Song Myung', serif;}
 		    #font1 {font-size: 25px; font-family: 'Song Myung', serif;}
 
-		    body {background: #7b5586; margin: 0px; }
+		    body {background: white; margin: 0px; }
 
 		    h1 {font-size: 100pt; margin: 0px; margin-top: 10px; font-family: 'East Sea Dokdo', cursive;}
 
