--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		    nav ul{float: right; margin: 0px;}
 		    nav ul li{height: 50px; width: 80px; float: left; list-style-type: none; }
 		    nav ul li a{display: block; text-decoration: none; height: 50px; text-align: center; line-height: 44px; transition: all 0.5s; font-size: 23px;}
-		    nav ul li a:hover {color: #dbbadd; background: #8c5d9d; font-size: 20px;}
+		    nav ul li a:hover {color: #8c5d9d; background: #e5e0d9; font-size: 20px;}
 		    
 		    .line {border: 5px; }
 		    .w600 {width: 600px; }
